remove old logic of getting profs statuses
better acknowledgement of supervisor